# pipeline-enriquecimiento-clientes-o-proveedores

./: .env.example  .gitignore  README.md  README_ENG.md
config/mappings/: default.yaml
desktop-app/: index.html  package-lock.json  package.json  tailwind.config.js
desktop-app/src/: App.tsx  index.css  main.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src/components/: ColumnMappingStep.tsx  ConfigurationPanel.tsx  FileSelectionPanel.tsx  LogsPanel.tsx  ProgressPanel.tsx  ResultsTable.tsx  SummaryCard.tsx
desktop-app/src/components/base/: AppButton.tsx  AppCard.tsx  AppInput.tsx  AppTable.tsx
desktop-app/src/layouts/: UbuntuLayout.tsx  WindowsLayout.tsx
desktop-app/src/platform/: PlatformProvider.tsx  detectPlatform.ts
desktop-app/src/services/: pipelineService.ts
desktop-app/src/themes/: shared.css  ubuntu.css  windows.css
desktop-app/src/types/: pipeline.ts
src/: main.py
src/agents/: gpt_client.py  mini_agent.py
src/cache/: cache_manager.py
src/config/: excel_schema.py  settings.py
src/enrichment/: dataframe_normalizer.py  excel_updater.py  field_validators.py
src/extraction/: ocr_reader.py  page_scorer.py  pdf_reader.py  text_cleaner.py
src/matching/: proveedor_matcher.py
src/parsing/: factura_parser.py  rut_parser.py
src/schema/: canonical_schema.py  column_detector.py  column_mapper.py  mapping_profile.py  schema_aliases.yaml
src/utils/: confidence.py
