[package]
name = "act-proveedores"
version = "0.1.0"
description = "Actualización automática de proveedores desde facturas y RUTs"
authors = ["Henry Valencia", "Farid Prado"]
edition = "2021"

[lib]
name = "act_proveedores_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = [] }
tauri-plugin-dialog  = "2"
tauri-plugin-opener  = "2"
tauri-plugin-os      = "2"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde_yaml      = "0.9"

[profile.release]
panic = "abort"   # minifica el binario final
codegen-units = 1 # optimización máxima LTO
lto = true
opt-level = "s"   # priorizar tamaño sobre velocidad
strip = true
